client/src/scss/pages/client/game.scss
/* ... */
#btn-close-minimap {
    position: absolute;
    z-index: 1000;
    top: 16px;
}

#top-left-container {
    position: absolute;
    top: 10px;
    left: 10px;
    width: 310px;

    display: flex;
    flex-direction: unset;
    flex-wrap: wrap;

    @media screen and (max-width: variables.$screen_large) {
        top: 5px;
        left: 5px;
        flex-direction: unset;
        flex-wrap: wrap;
        width: 340px;

        .btn-lg {
            height: unset;
        }
    }
}

#game-misc-stats {
    display: flex;
    flex-wrap: wrap;
}

#minimap-border {
    display: inline-block;
    width: 220px;
    height: 220px;
    margin-right: 5px;

    border: 10px solid palette.$transparent_bg;
    border-radius: 10px;

    @media screen and (max-width: variables.$screen_large) {
        width: 135px;
        height: 135px;
        border-width: 5px;
        border-radius: 5px;
    }
}

#debug-hud {
    // margin-top: -10px;
    text-shadow: 1px 1px 2px black;
    font-family: monospace;

    @media screen and (max-width: variables.$screen_large) {
        font-size: 14px;
    }
}

#gas-timer {
    width: 80px;
    height: 30px;
    padding: 6px 9px 6px 9px;
    margin: 8px 0 8px 0;
    display: flex;
    border-radius: 6px;
    align-items: center;
    background-color: palette.$transparent_bg;
    font-size: 17px;
    @include variables.text-shadow;

    &.advancing {
        animation: advancing 2s linear infinite;
    }

    @keyframes advancing {
        0% {
            background-color: #ff4800aa;
        }

        50% {
            background-color: #000000aa;
        }

        100% {
            background-color: #ff4800aa;
        }
    }

    #gas-timer-text {
        float: right;
        margin-left: auto;
    }

    #gas-timer-image {
        position: relative;
        bottom: 1px;
        @include variables.drop-shadow;

        @media screen and (max-width: variables.$screen_large) {
            width: 14px;
            height: 14px;
        }
    }

    @media screen and (max-width: variables.$screen_large) {
        padding: 4px 6px 4px 6px;
        margin: 4px 0 4px 0;
        font-size: 14px;
        width: 60px;
        height: fit-content;
    }
}

.spectating-mode {
    @media screen and (max-width: variables.$screen_large) {
        display: inline-flex;
        gap: 5px;

        #debug-hud {
            font-size: 10px;
        }
    }
}

#team-container {
    display: flex;
    flex-direction: column;
    gap: 5px;
    width: max-content;

    position: absolute;
    left: 5px;
    top: 50%;
    transform: translateY(-50%);

    @media screen and (max-width: variables.$screen_medium) {
        transform: scale(55%);
    }

    @media screen and (max-height: 800px) {
        flex-direction: column;
        top: 250px;
        transform: scale(55%);
        transform-origin: 0% 0%;
    }

    @media screen and (min-width: variables.$screen_large) {
        flex-direction: column;
        left: 240px;
        top: 20px;
    }

    @media screen and (max-height: 600px) and (max-width: variables.$screen-large) {
        flex-direction: row;
        left: 145px;
        top: 106px;
        transform: scale(55%);
        transform-origin: 0% 0%;
    }

    .teammate-container {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        background-color: palette.$transparent_bg;
        padding: 6px 10px 6px 7px;
        border-radius: 8px;
        position: relative;
        width: max-content;

        @media screen and (max-height: 600px) and (max-width: variables.$screen-large) {
            padding: 7px;
        }

        &.downed {
            animation: downed 1s linear infinite;
        }

        @keyframes downed {
            0% {
                background-color: #ff0000aa;
            }

            50% {
                background-color: #000000aa;
            }

            100% {
                background-color: #ff0000aa;
            }
        }

        &.disconnected {
            filter: brightness(50%);
        }

        .teammate-indicator-container {
            width: 36px;
            height: 36px;
            border-radius: 50%;
            position: absolute;
            left: 13px;

            .teammate-indicator {
                width: 36px;
                height: 36px;
                mix-blend-mode: multiply;
            }
        }

        .teammate-health-indicator {
            -webkit-transform: rotate(90deg) scaleX(-1);
            transform: rotate(90deg) scaleX(-1);
        }

        .teammate-name {
            margin-left: 8px;
            font-size: 20px;
            font-weight: 600;
            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
        }

        .teammate-badge {
            margin-left: 5px;
            width: 30px;
        }

        @media screen and (max-height: 600px) and (max-width: variables.$screen-large) {
            .teammate-name,
            .teammate-badge {
                display: none;
            }
        }
    }
}
/* ... */

